<resources>
    <string name="app_name">Meters</string>
    <string name="addMeterDescription">Добавить счетчик</string>
    <string name="adress">Адрес 1</string>
    <string name="meterNumber">Номер счетчика</string>
    <string name="T1">Тариф Т1</string>
    <string name="T2">Тариф Т2</string>
    <string name="T">Тариф Т</string>
    <string name="buttonSave">Сохранить показания</string>
    <string name="adress1">Крылова 15 Корпус 1 п.1</string>
    <string name="adress2">Крылова 15 Корпус 1 п.2</string>
    <string name="adress3">Крылова 15 Корпус 1 п.3</string>
    <string name="adress4">Крылова 15 Корпус 2 п.1</string>
    <string name="adress5">Крылова 15 Корпус 2 п.2</string>
    <string name="adress6">Крылова 15 Корпус 2 п.3</string>
    <string name="adress7">Крылова 15 Корпус 3 п.1</string>
    <string name="adress8">Крылова 15 Корпус 3 п.2</string>
    <string name="adress9">Шевченко 288 Корпус 3</string>
    <string name="adress10">Шевченко 288 Корпус 4</string>
    <string name="hintMeterNumber">№ счетчика</string>
    <string name="hintT1">Введите показания Т1</string>
    <string name="hintT2">Введите показания T2</string>
    <string name="hintT">Введите показания Т</string>
    <string name="textViewSaveMessage">Сохранено</string>
</resources>