<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MeterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MeterActivity">
        <TextView
            android:id="@+id/textViewAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:text="@string/adress"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/purple_500"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/numberFirstLayout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/adressLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNumberLabel_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/meterNumber"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumber_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintMeterNumber"
                    tools:text="56464555"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/T1Layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/numberLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewT1Label_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT1_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT1"
                    tools:text="1345"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/T2Layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewT2Label_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T2"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT2"
                    tools:text="566"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/TLayout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTLabel_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT"
                    tools:text="60000"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <Button
                android:id="@+id/buttonOnSave_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSave"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewSaveMessage"
                android:padding="8dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/numberLayout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNumberLabel_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/meterNumber"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumber_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintMeterNumber"
                    tools:text="56464555"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/T1Layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewT1Label_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT1_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT1"
                    tools:text="1345"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/T2Layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/T1Layout_2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewT2Label_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T2"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT2"
                    tools:text="566"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/TLayout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTLabel_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT"
                    tools:text="60000"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:id="@+id/buttonOnSave_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSave"
                app:layout_constraintTop_toBottomOf="@+id/TLayout_2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/numberLayout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNumberLabel_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/meterNumber"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumber_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintMeterNumber"
                    tools:text="56464555"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/T1Layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/numberLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewT1Label_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT1_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT1"
                    tools:text="1345"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/T2Layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/T1Layout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewT2Label_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T2"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT2_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT2"
                    tools:text="566"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/TLayout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/T2Layout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTLabel_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/T"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextT_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:inputType="number"
                    android:hint="@string/hintT"
                    tools:text="60000"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:id="@+id/buttonOnSave_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSave"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

